--- a/src/components/Slider/Slider.css
+++ b/src/components/Slider/Slider.css
@@ -1,26 +1,3 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-
-body {
-    overflow-x: hidden;
-}
-
-/* html,
-body {
-  position: relative;
-  height: 100%;
-}
-
-body {
-  background: #eee;
-  font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
-  font-size: 14px;
-  color: #000;
-  margin: 0;
-  padding: 0;
-}
-
 .swiper {
   width: 100%;
   height: 100%;
@@ -31,7 +8,7 @@ body {
   font-size: 18px;
   background: #fff;
 
-  /* Center slide text vertically /
+  /* Center slide text vertically */
   display: flex;
   justify-content: center;
   align-items: center;
@@ -54,4 +31,4 @@ body {
 
 .swiper-slide:nth-child(3n) {
   width: 40%;
-} */
+}
